--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,8 +2,9 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>NetDisk</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
+    <welcome-file>page/login.jsp</welcome-file>
   </welcome-file-list>
+ 
   
  <servlet>
       <servlet-name>spmvc</servlet-name>
@@ -14,5 +15,6 @@
       <servlet-name>spmvc</servlet-name>
     <url-pattern>*.do</url-pattern>      
   </servlet-mapping>
+ 
   
  </web-app>
