--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
 encoding//WebContent/page/upload.jsp=UTF-8
+encoding//src/main/java/com/cxd/controller/FileController.java=UTF-8
+encoding//src/main/java/com/cxd/service/FileService.java=UTF-8
