add picture preview function.

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,3 +5,4 @@ encoding//WebContent/page/upload.jsp=UTF-8
 encoding//src/main/java/com/cxd/controller/FileController.java=UTF-8
 encoding//src/main/java/com/cxd/service/FileService.java=UTF-8
 encoding//src/main/java/com/cxd/service/UserService.java=UTF-8
+encoding/README.md=UTF-8
